--- a/app/templates/currentrecipe.html
+++ b/app/templates/currentrecipe.html
@@ -36,7 +36,7 @@
                             Delete From Cart
                         </button>
                         <button type="button" class="form-buttons form-1-home-button">
-                            <a href="{% url 'forums' %}" class="form-1-anchor-style">
+                            <a href="{% url 'forums' recipe.recipe_author %}" class="form-1-anchor-style">
                                 Rate This Recipe
                             </a>
                             <i class="fa-regular fa-star"></i>
